1507941678 | 33 files | M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_dutch.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ge
https://steamdb.info/patchnotes/2269150/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
@@ -2342,10 +2342,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"PŘEDMĚTY VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Exkluzivní avatar a objekt pro vlastníky headsetu HTC Vive."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"PROSTŘEDÍ VIVE"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Navštivte Driftwood, prostředí vytvořené společností HTC."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"PROSTŘEDÍ OD VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Zde naleznete prostředí vytvořená pro režim SteamVR přímo ve společnosti Valve."
@@ -2967,7 +2967,7 @@
 "VR_Avatar_DuckHuntDogHead"	"Psí hlava"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"Hlava maskota hry Duck Season. Hodí se na party nebo pro strašení kamarádů.\n\nDárek ze hry Duck Season."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite avatar"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Avatar z legendární akční střílečky.\n\nDárek ze hry Rez Infinite."
@@ -2996,5 +2996,29 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Pokud se na dané místo nemůžete teleportovat, křivka teleportu se zbarví červeně."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Figurka Magi"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Figurka tajemné dívky Magi.\n\nDárek ze hry OVERTURN."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Hruška Poppy"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Speciální bojová hruška.\n\nDárek ze hry Smashbox Arena."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Přátelský kreslený dinosaurus.\n\nDárek ze hry Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Mount Rainier"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"Nejvyšší hora státu Washington v USA."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Yetti"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"Dle starobylého tibetského folklóru okupuje yetti himalájský region Nepálu. Dle hry Team Fortress 2 jej naleznete v džungli. Tak to nám tedy vysvětlete, co dělá na hoře ve státu Washington!?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Úkol: Yetti"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Yettiho odemknete tak, že jej najdete na hoře Mount Rainier."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
 }
 }
