--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
@@ -2339,10 +2339,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE-GENSTANDE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Glem ikke at tage et kig på Vive-avatarene og -rekvisitterne til Vive-ejere."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"VIVE-MILJØ"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Udforsk Driftwood, et miljø skabt af Vive Creative Labs."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE-MILJØER"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klik her for miljøer lavet af Valve-kunstnere til SteamVR."
@@ -2964,7 +2964,7 @@
 "VR_Avatar_DuckHuntDogHead"	"Hundehoved"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"Maskothovedet af hunden fra Duck Season. Perfekt til fester, hvor du vil skjule dit sande ansigt eller skræmme dine venner.\n\nOplåst ved at spille Duck Season."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite-avatar"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Den spillende avatar for det legendariske action-skydespil\n\nOplåst ved at spille Rez Infinite."
@@ -2993,5 +2993,23 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Teleporteringsbuen farves rød, hvis du ikke kan teleportere derhen."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Magi-figur"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"En figur af den mystiske pige \"MAGI\" fra OVERTURN.\n\nOplåst af at spille OVERTURN."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pære-fekt.\n\nOplåst ved at spille Smashbox Arena."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Nabolagets venlige 3D-malende dinosaur.\n\nOplåst ved at spille Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Mount Rainier"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"Det højeste bjerg i staten Washington, USA."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_DeservingLifePizza"	"Pizza er alt!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"En lækker rest fra kidnapperen.\n\nOplåst ved at spille Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
 }
 }
