--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
@@ -2340,9 +2340,9 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE-ESINEET"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "HTCPromoDesc"	"Muista käydä katsomassa Viven omistajien Vive-avatar ja esine."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE-YMPÄRISTÖT"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klikkaa tästä nähdäksesi Valven taiteilijoiden tekemät SteamVR-ympäristöt."
@@ -2964,7 +2964,7 @@
 "VR_Avatar_DuckHuntDogHead"	"Koiranaamari"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"Ankkojen pyyntikauden metsästyskoiran maskottinaamari. Loistava kemuhin, omien kasvojen peittämiseen tai kavereiden pelästyttelyyn. \n\nAvataan pelaamalla Duck Hunt -peliä."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite -avatar"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Avatar legeendarisesta ampumis- ja toimintapelistä.\n\nAvataan pelaamalla peliä Rez Infinite."
