--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
@@ -1660,7 +1660,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]TutorialWelcome_Touch_Bottom_Desc"	"Don't forget to visit the Workshop to download more environments from the community."
 "TutorialTeleport_Title"	"Vous déplacer"
 "[english]TutorialTeleport_Title"	"Moving around"
-"TutorialTeleport_Tile1_Touch_Desc"	"Pour se téléporter, appuyez sur le joystick en avant."
+"TutorialTeleport_Tile1_Touch_Desc"	"Pour se téléporter, poussez le joystick en avant."
 "[english]TutorialTeleport_Tile1_Touch_Desc"	"To teleport, push forward on the joystick."
 "TutorialTeleport_Tile2_Touch_Desc"	"Vous observerez un arc qui se termine par un cercle vert sur le sol."
 "[english]TutorialTeleport_Tile2_Touch_Desc"	"You will see an arc that ends with a green circle on the ground."
@@ -2342,10 +2342,10 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"OBJETS VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Découvrez l'avatar et les objets Vive exclusifs pour les possesseurs du Vive."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"ENVIRONNEMENT VIVE"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Explorez Driftwood, un environnement créé par Vive Creative Labs."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"ENVIRONNEMENTS DE VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Cliquez ici pour découvrir tous les environnements créés par des artistes de Valve pour SteamVR."
@@ -2967,7 +2967,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "VR_Avatar_DuckHuntDogHead"	"Tête de chien"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"La tête de la mascotte de Duck Season. Parfaite pour les soirées déguisées ou pour effrayer vos amis.n\nDébloqué pour avoir joué à Duck Season."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Figurine de Rez Infinite"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"La figurine du personnage d'un jeu d'action-shooter légendaire.\n\nDébloqué pour avoir joué à Rez Infinite."
@@ -2988,7 +2988,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
 "TutorialWelcome_Tile3_WinMR_Desc"	"Pour ouvrir et fermer ce menu, appuyez sur le bouton Menu de votre contrôleur."
 "[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
-"TutorialTeleport_Tile1_WinMR_Desc"	"Pour se téléporter, appuyez sur le joystick en avant."
+"TutorialTeleport_Tile1_WinMR_Desc"	"Pour se téléporter, poussez le joystick en avant."
 "[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
 "TutorialTeleport_Tile2_WinMR_Desc"	"Vous verrez alors un arc pointant vers un cercle vert sur le sol."
 "[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
@@ -2996,5 +2996,29 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"L'arc deviendra rouge si vous ne pouvez pas vous téléporter à cet endroit."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Figurine de Magi"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"La figurine de MAGI, héroïne mystérieuse de OVERTURN.\n\nDébloquée en jouant à OVERTURN."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Poppy la poire"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Presque poire-faite.\n\nDébloquée en jouant à Smashbox Arena."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Un dinosaure peint en 3D. Le deuxième meilleur ami de l'homme.\n\nDébloqué en jouant à Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Mont Rainier"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"La plus haute montagne de l'état de Washington, aux États-Unis."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Yéti"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"Selon les croyances tibétaines, le noble Yeti habite la région himalayenne du Népal. Selon Team Fortress 2, vous le trouverez dans le Jungle Inferno. Comment cette pitoyable créature a-t-elle atterri dans une montagne de l'état de Washington ?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Quête - Yéti"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Recherchez cette créature mythique sur le Mont Rainier."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
 }
 }
