--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt
@@ -2341,10 +2341,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE-GEGENSTÄNDE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Vergessen Sie nicht, einen Blick auf den Avatar und die Requisiten für Vive-Besitzer zu werfen."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"VIVE-UMGEBUNG"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Erkunden Sie Driftwood, eine Umgebung, die von Vive Creative Labs entworfen wurde."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE-UMGEBUNGEN"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klicken Sie hier für Umgebungen, die von Valve-Künstlern für SteamVR erstellt wurden."
@@ -2965,18 +2965,26 @@
 "[english]VR_PhysicsProp_RacketNxFigurine_Desc"	"A miniature figurine of the Racket: Nx's Alien Robot Lizard with Sound Activated Brain (TM).\n\n*Sound Activated Brain not included.\n\nUnlocked by playing Racket: Nx."
 "VR_Avatar_DuckHuntDogHead"	"Hundekopf"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
-"VR_Avatar_DuckHuntDogHead_Desc"	"Der Kopf des Maskottchens von Duck Season Dog. Prima für Partys, zum Maskieren Ihres Gesichts oder um Ihre Freunde zu erschrecken.\n\nZum Freischalten spielen Sie bitte Duck Hunt."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"VR_Avatar_DuckHuntDogHead_Desc"	"Der Kopf des Maskottchens von Duck Season Dog. Prima für Partys, zum Maskieren Ihres Gesichts oder um Ihre Freunde zu erschrecken.\n\nZum Freischalten spielen Sie bitte Duck Season."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite-Avatar"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Der Spieleravatar des legendären Action-Shooters.\n\nZum Freischalten spielen Sie bitte Rez Infinite."
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
 "UGCHiddenLabel"	"Nutzergenerierte Inhalte sind versteckt. Sie können dies in den Einstellungen ändern."
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
+"VR_Avatar_Wearable_GornWingedHelmet"	"Geflügelter Helm"
+"[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
+"VR_Avatar_WindowsMR_Controllers"	"Windows-MR-Controller"
+"[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
+"VR_Avatar_WindowsMR_Controllers_Desc"	"Windows-MR-Controller"
+"[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
 "TutorialWelcome_Tile1_WinMR_Desc"	"Willkommen bei SteamVR!"
 "[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
 "TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR können Sie reale und imaginäre Orte mit Freunden besuchen."
 "[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"Nutzen Sie die Menütaste Ihres Controllers, um dieses Menü zu öffnen oder zu schließen."
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
 "TutorialTeleport_Tile1_WinMR_Desc"	"Zum Teleportieren den Joystick nach vorne drücken."
 "[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
 "TutorialTeleport_Tile2_WinMR_Desc"	"Sie werden einen Lichtbogen sehen, der mit einem grünen Kreis auf dem Boden endet."
@@ -2985,5 +2993,11 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Wenn Sie nicht dorthin teleportieren können, wird der Teleportbogen rot."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_Map_MountRainierCamp"	"Mount Rainier"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_PhysicsProp_TF2Yeti"	"Yeti"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
 }
 }
