--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
@@ -2340,9 +2340,9 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE アイテム"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "HTCPromoDesc"	"Vive アバターと小道具を忘れずチェックしよう。"
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE 環境"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Valve のアーティストが SteamVR 用に制作した環境を見るにはここをクリック。"
@@ -2964,7 +2964,7 @@
 "VR_Avatar_DuckHuntDogHead"	"犬の頭"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"Duck Season のマスコットの犬の頭。最高のパーティグッズで顔を隠して友達を怖がらせよう。\n\nDuck Season をプレイしてアンロック。"
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite アバター"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"伝説のアクションシューティングのプレイヤーアバター。\n\nRez Infinite をプレイしてアンロック。"
