--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_korean.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_korean.txt
@@ -2340,9 +2340,9 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE 아이템"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "HTCPromoDesc"	"Vive 플레이어를 위해 마련된 Vive 아바타와 소품을 꼭 확인해 보세요."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE 환경"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Valve 아티스트가 만든 SteamVR 환경을 보려면 클릭하세요."
@@ -2964,7 +2964,7 @@
 "VR_Avatar_DuckHuntDogHead"	"사냥개 머리"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"오리 사냥개 마스코트의 머리입니다. 파티에 갈 때도 쓰고, 얼굴을 감춰야 하거나 친구를 놀라게 해주고 싶을 때 좋아요.\n\nDuck Hunt를 플레이하면 잠금해제 됩니다."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite 아바타"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"전설적인 액션 슈팅 게임의 플레이어 아바타.\n\nRez Infinite를 플레이하면 잠금 해제됩니다."
