--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
@@ -1125,7 +1125,7 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"OBIECTE VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "UGCItem_Creator"	"{s:creator_name}"
 "[english]UGCItem_Creator"	"{s:creator_name}"
 "UGCItem_Title_Text"	"De la:"
@@ -1140,6 +1140,8 @@
 "[english]ShowAllAppsText"	"View All Applications"
 "WorldPublicLobbyTitle"	"CAMERE"
 "[english]WorldPublicLobbyTitle"	"ROOMS"
+"VRHome_Patio_Title"	"SE SALVEAZĂ"
+"[english]VRHome_Patio_Title"	"SAVING"
 "VRHome_Config_Previous"	"ÎNAPOI"
 "[english]VRHome_Config_Previous"	"PREVIOUS"
 "VRHome_Config_Next"	"CONTINUĂ"
@@ -1334,11 +1336,15 @@
 "[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
 "TutorialWelcome_Tile2_WinMR_Desc"	"În SteamVR poți vizita locuri adevărate și imaginare împreună cu prietenii tăi."
 "[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"Pentru a deschide și a închide acest meniu, utilizează butonul de meniu de pe controllerul tău."
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
 "TutorialTeleport_Tile2_WinMR_Desc"	"Vei vedea un arc care se sfârșește cu un cerc verde pe sol."
 "[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
 "TutorialTeleport_Tile3_WinMR_Desc"	"Dă drumul la joystick pentru a te teleporta la cercul verde."
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Arcul teleportării se va face roșu dacă nu te poți teleporta la acea locație."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
 }
 }
