--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_russian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_russian.txt
@@ -2343,9 +2343,9 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"ПРЕДМЕТЫ VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "HTCPromoDesc"	"Если вы являетесь обладателем Vive, не забудьте испробовать аватар и объект Vive."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"ИГРОВЫЕ МИРЫ VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Здесь вы найдёте игровые миры, созданные художниками Valve"
@@ -2967,7 +2967,7 @@
 "VR_Avatar_DuckHuntDogHead"	"Голова пса"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"Голова пса из игры Duck Season. Подходит для вечеринок, сокрытия личности и запугивания друзей.\n\nВыдаётся за игру в Duck Season."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Аватар из Rez Infinite"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Аватар игрока из легендарного экшен-шутера.\n\nВыдаётся за игру в Rez Infinite."
@@ -2976,6 +2976,8 @@
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
 "VR_Avatar_Wearable_GornWingedHelmet"	"Крылатый шлем"
 "[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
+"VR_Avatar_Wearable_GornWingedHelmet_Desc"	"Крылатый шлем, сорванный с головы самого Генерала. Судя по запаху, его никогда не мыли. Гордо позаимствован у победоносного гладиатора из GORN.\n\nВыдаётся за игру в GORN."
+"[english]VR_Avatar_Wearable_GornWingedHelmet_Desc"	"The Winged Helmet, torn from the head of 'The General' himself. Judging by smell, never been washed. Proudly on loan from a victorious GORN gladiator.\n\nUnlocked by playing GORN."
 "VR_Avatar_WindowsMR_Controllers"	"Контроллеры Windows MR"
 "[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
 "VR_Avatar_WindowsMR_Controllers_Desc"	"Контроллеры Windows MR"
