--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_spanish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_spanish.txt
@@ -2340,9 +2340,9 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"ARTÍCULOS DE VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "HTCPromoDesc"	"No olvides echar un vistazo al avatar de Vive y a los accesorios de propietarios Vive."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"ENTORNOS DE VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Haz clic aquí para ver los entornos creados por los artistas de Valve para SteamVR."
@@ -2964,12 +2964,14 @@
 "VR_Avatar_DuckHuntDogHead"	"Cabeza de perro"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"Cabeza de mascota del perro de Duck Season. Ideal para fiestas, ocultar tu verdadero rostro o asustar a tus amigos.\n\nDesbloqueada por jugar a Duck Hunt."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Avatar de Rez Infinite"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"El avatar del jugador del legendario shooter de acción.\n\nDesbloqueado por jugar a Rez Infinite."
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
 "UGCHiddenLabel"	"El contenido generado por los usuarios está oculto. Puedes cambiar esto en Ajustes."
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
+"VR_Avatar_Wearable_GornWingedHelmet"	"Casco alado"
+"[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
 }
 }
