--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_swedish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_swedish.txt
@@ -1545,13 +1545,13 @@
 "[english]Dashboard_Tutorial"	"Tutorials"
 "Dashboard_Settings"	"Inställningar"
 "[english]Dashboard_Settings"	"Settings"
-"PrivateDetailLabel"	"Besöker ensam"
+"PrivateDetailLabel"	"Besöker just nu:"
 "[english]PrivateDetailLabel"	"Currently Visiting:"
 "PrivateHostDetailLabel"	"Värd för privat rum:"
 "[english]PrivateHostDetailLabel"	"Hosting Private Room:"
 "PrivateVisitDetailLabel"	"Besöker privat rum:"
 "[english]PrivateVisitDetailLabel"	"Visiting Private Room:"
-"PublicHostDetailLabel"	"Värd för offentligt rum"
+"PublicHostDetailLabel"	"Värd för offentligt rum:"
 "[english]PublicHostDetailLabel"	"Hosting Public Room:"
 "PublicVisitDetailLabel"	"Besöker offentligt rum:"
 "[english]PublicVisitDetailLabel"	"Visiting Public Room:"
@@ -2041,7 +2041,7 @@
 "[english]TutorialMultiTool_Tile2_Desc"	"When you freeze a prop, it becomes stuck and can’t be interacted with until thawed."
 "TutorialMultiTool_Tile3_Desc"	"Du kan även använda detta för att ta bort, klona, och frysa fast målningar gjorda med färgsprutan."
 "[english]TutorialMultiTool_Tile3_Desc"	"Clone a prop to create exact duplicates, and use the delete function to clean up."
-"TutorialMultiTool_Bottom_Desc"	"Kloningsfunktionen skapar ett till föremål med samma storlek och färg som föremålet funktionen användes på."
+"TutorialMultiTool_Bottom_Desc"	"Multiverktyget är användbart för att skapa egna sparade miljöer."
 "[english]TutorialMultiTool_Bottom_Desc"	"The Multi-Tool is useful for creating custom saved environments."
 "TutorialSaved_Title"	"Sparade miljöer"
 "[english]TutorialSaved_Title"	"Saved Environments"
@@ -2049,7 +2049,7 @@
 "[english]TutorialSaved_Tile1_Desc"	"Players can customize and save an environment to set as home, load later, or open up to the public."
 "TutorialSaved_Tile2_Desc"	"För att spara, tryck helt enkelt på knappen \"Spara denna miljö\" i dashboard."
 "[english]TutorialSaved_Tile2_Desc"	"To save, simply select the 'Save This Environment' button on the Dashboard."
-"TutorialSaved_Tile3_Desc"	"Ladda sparade miljöer från miljöpanelen - kolla efter föremål med sparikonen."
+"TutorialSaved_Tile3_Desc"	"Ladda sparade miljöer från miljöpanelen - kolla efter sparikonen."
 "[english]TutorialSaved_Tile3_Desc"	"Load Saved Environments from the Environments panel - look for the Saved tab."
 "TutorialSaved_Bottom_Desc"	"Föremål och målningar sparas i och med sparandet av en miljö."
 "[english]TutorialSaved_Bottom_Desc"	"Props and drawings are all saved when saving an environment."
@@ -2189,6 +2189,9 @@
 "[english]VR_Furniture_Bench001_Desc"	"A bench."
 "VR_Furniture_Statue001_Desc"	"En staty."
 "[english]VR_Furniture_Statue001_Desc"	"A statue."
+"VR_PropTool_BoxBot_Desc"	"
+"
+"[english]VR_PropTool_BoxBot_Desc"	""
 "BrowseBackgroundsTitle"	"Bakgrunder"
 "[english]BrowseBackgroundsTitle"	"Backgrounds"
 "Customize_Button"	"Ändra bakgrund"
@@ -2209,6 +2212,8 @@
 "[english]BrowseWorkshop_ViewInMenu"	"View in Menu"
 "LoadingBackgroundMessage"	"Läser in bakgrunden"
 "[english]LoadingBackgroundMessage"	"Loading Background"
+"HostMessageTitle"	"Vilken sorts rum?"
+"[english]HostMessageTitle"	"What kind of Room?"
 "SavedEnvironmentCheck"	"Använd min sparade miljö"
 "[english]SavedEnvironmentCheck"	"Use My Saved Environment"
 "CancelHostText"	"Avbryt"
@@ -2227,6 +2232,8 @@
 "[english]Friends_App_Title"	"{s:in_app_name}"
 "Lobby_PublicRoom"	"Offentligt rum"
 "[english]Lobby_PublicRoom"	"Public Room"
+"HostDialogTitle"	"Vilken sorts rum?"
+"[english]HostDialogTitle"	"What kind of Room?"
 "CustomizeButtonLabel"	"Anpassa avatar"
 "[english]CustomizeButtonLabel"	"Customize Avatar"
 "GameUI_Disconnect_ConnectionTimedout"	"Kan inte upprätta en anslutning till rummet"
@@ -2246,7 +2253,7 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE-FÖREMÅL"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "ValvePromoTitle"	"VALVE-MILJÖER"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klicka här för miljöer som skapats av Valve-konstnärer för SteamVR."
@@ -2455,12 +2462,18 @@
 "[english]ContentBrowser_Things_Props"	"Props"
 "ContentBrowser_Things_Tools"	"Verktyg"
 "[english]ContentBrowser_Things_Tools"	"Tools"
+"ContentBrowser_Things_Wearables"	"Bärbara"
+"[english]ContentBrowser_Things_Wearables"	"Wearables"
 "ContentBrowser_Things_Furniture"	"Möbler"
 "[english]ContentBrowser_Things_Furniture"	"Furniture"
 "ContentBrowser_Things_Trophies"	"Troféer"
 "[english]ContentBrowser_Things_Trophies"	"Trophies"
+"BrowseThingsTitle"	"Saker"
+"[english]BrowseThingsTitle"	"Things"
 "BrowseToolsTitle"	"Verktyg"
 "[english]BrowseToolsTitle"	"Tools"
+"BrowseWearablesTitle"	"Bärbara"
+"[english]BrowseWearablesTitle"	"Wearables"
 "BrowseFurnitureTitle"	"Möbler"
 "[english]BrowseFurnitureTitle"	"Furniture"
 "BrowseTrophiesTitle"	"Troféer"
@@ -2595,6 +2608,8 @@
 "[english]VR_PhysicsProp_KatanaX"	"The Katana X"
 "VR_PhysicsProp_RacketNxFigurine"	"RNX-avatar"
 "[english]VR_PhysicsProp_RacketNxFigurine"	"RNX Avatar"
+"VR_Avatar_DuckHuntDogHead_Desc"	"Maskothuvud baserat på hunden från Duck Season. Bra för fester, maskerader och halloween.\n\nUpplåst genom att spela Duck Season."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_Avatar_Wearable_GornWingedHelmet"	"Vinghjälm"
 "[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
 "VR_Avatar_WindowsMR_Controllers"	"Windows MR-kontroller"
@@ -2615,5 +2630,11 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Teleportbågen blir röd om du inte kan teleportera till den platsen."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Grannskapets vänliga 3D-målande dinosaurie.\n\nUpplåst genom att spela Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
 }
 }
