--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_thai.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_thai.txt
@@ -285,7 +285,7 @@
 "[english]TutorialPage2_Tile3_Controller_Desc"	"To close the menu, press the Y button.\n\nIf you ever wish to run this tutorial again, select the question mark button in the top right of the Menu.\n\nSelect 'Done' to exit this tutorial now."
 "Mars_ApproachTitle"	"เข้าใกล้"
 "[english]Mars_ApproachTitle"	"Approach"
-"Mars_ApproachDesc"	"Curiosity Rover มาถึงภูมิภาคนี้ในฤดูใบไม้ร่วงปี 2014 ก่อนใช้เวลากว่า 1 ปีในการตระเวณรอบพื้นที่ที่คุณกำลังสำรวจ - ขอข้อมูลภาพรวมก่อนที่จะทำการตรวจสอบอย่างละเอียดมากขึ้นในคุณสมบัติทางธรณีวิทยาตามความสนใจทางวิทยาศาสตร์โดยเฉพาะ"
+"Mars_ApproachDesc"	"รถสำรวจดาวอังคาร Curiosity มาถึงภูมิภาคนี้ในฤดูใบไม้ร่วงปี 2014 ก่อนใช้เวลากว่า 1 ปีในการตระเวณรอบพื้นที่ที่คุณกำลังสำรวจ - เก็บข้อมูลภาพรวมก่อนจะตรวจสอบอย่างละเอียดมากขึ้นในคุณสมบัติทางธรณีวิทยาตามความสนใจทางวิทยาศาสตร์โดยเฉพาะ"
 "[english]Mars_ApproachDesc"	"The Curiosity rover reached this region in the autumn of 2014, before spending more than a year circling the area you are exploring - getting an overview before more thoroughly investigating geological features of particular scientific interest."
 "Mars_ArtisticLicenceTitle"	"ใบอนุญาตศิลปะ"
 "[english]Mars_ArtisticLicenceTitle"	"Artistic Licence"
@@ -723,6 +723,8 @@
 "[english]ValveLobby_IntroDesc"	"Hi, I’m Gabe Newell and I work at Valve. This is the lobby for our offices in Bellevue, Washington. In our work, we really value face to face collaboration so we built our offices to support that. As you look around, you may notice the gifts from the community, awards we’ve won, and items related to our games and hardware products. Take a look around and let us know what you think. We’ve been giving tours of our real-world offices to fans for years, so if you find yourself in Seattle someday, please come by and say hello.\n"
 "ValveLobby_AegisTitle"	"The Aegis of Champions"
 "[english]ValveLobby_AegisTitle"	"The Aegis of Champions"
+"ValveLobby_AegisDesc"	"เมื่อเราเริ่มต้นร่วมมือสร้าง Dota 2 กับ Icefrog เป็นเรื่องเห็นได้ชัดเจนว่าเราต้องเผชิญหน้ากับความท้าทายที่น่าสนใจ เช่น เราจะสามารถสร้างความมั่นใจให้กับฐานผู้เล่นมหึมาของ Dota 1 ว่าเราจะเป็นผู้พิทักษ์เกมอันเป็นที่รักของพวกเขาได้อย่างไร? \n\nเราต้องการแสดงให้พวกเขาเห็นว่าเราจริงจังกับเกมนี้ไม่แพ้กับพวกเขา และนั่นทำให้เราเปิดตัว Dota 2 ผ่านการเปิดตัวการแข่งขัน The International Dota 2 ซึ่งเป็นงานประจำปีที่เรานำสุดยอดทีม Dota 2 จากทั่วโลกมาแข่งขันเพื่อช่วงชิง Aegis อย่างที่คุณเห็นที่นี่ \n\nWeta Workshop ช่วยสร้างโล่รางวัลนี้จากทองแดงหล่อเย็นและเงินชุบเคลือบผิวด้วยไฟฟ้า ในแต่ละปีรายชื่อผู้ชนะเลิศของการแข่งขัน The International จะถูกจารึกไว้ที่ด้านหลังของโล่รางวัลนี้\n"
+"[english]ValveLobby_AegisDesc"	"When we started working with Icefrog on Dota 2, it was clear that we had an interesting challenge: how do we show Dota 1's enormous playerbase that they could trust us to be good stewards of their beloved game? \n\nWe wanted to show them that we took it as seriously as they did, which led us to launching Dota 2 by unveiling The International Dota 2 tournament, an annual event where we bring the top Dota 2 teams from around the world to compete for the Aegis you see here. \n\nWeta Workshop helped build this trophy out of cold cast bronze & electroplated silver.  Each year the names of The International winners are added to the inscription on its back.\n"
 "ValveLobby_InjectionMouldsTitle"	"แม่พิมพ์ Steam Controller"
 "[english]ValveLobby_InjectionMouldsTitle"	"Steam Controller Mold"
 "ValveLobby_InjectionMouldsDesc"	"นี่คือชุดฉีดขึ้นรูปต้นแบบสำหรับ Steam Controller ซึ่งเป็นแบบพิมพ์ต้นแบบที่ใช้สร้างยูนิตการทดสอบจำนวนไม่มาก ในกรณีนี้ แบบพิมพ์นี้ถูกใช้เพื่อสร้างคอนโทรลเลอร์ เวอร์ชัน Gordon จำนวน 200 ยูนิต ซึ่งเป็นเวอร์ชันที่ใช้สำหรับทดสอบเป็นเวลา 1 ปีก่อนเปิดตัวคอนโทรลเลอร์จริงในเดือนพฤศจิกายน 2015 \n\nแบบพิมพ์เหล่านี้และเวอร์ชัน Gordon มุ่งเน้นที่การทดสอบของความสะดวกสบายในการใช้และประสิทธิภาพการทำงาน หลังจากนั้นได้มีการเปลี่ยนแปลงใหญ่หลายอย่างในการออกแบบคอนโทรลเลอร์ ซึ่งเป็นผลมาจากการทดสอบที่เราดำเนินการกับต้นแบบนี้\n\n"
@@ -1563,6 +1565,8 @@
 "[english]AvatarRotateText"	"ROTATE AVATAR"
 "WelcomePanel_PressBButton"	"ยินดีต้อนรับสู่ SteamVR! \n\nกดปุ่ม B หรือ Y บนคอนโทรลเลอร์ของคุณเพื่อเริ่มต้น"
 "[english]WelcomePanel_PressBButton"	"Welcome to SteamVR! \n\nPress the B or Y button on your controller to begin."
+"WelcomePanel_UpdateDescTouch"	"ยินดีต้อนรับสู่ SteamVR! \n\nกดปุ่ม B หรือ Y เพื่อเปิดหาสภาพแวดล้อมและพบปะกับเพื่อน ๆ\n\nหากต้องการสมัครใช้งานสภาพแวดล้อมเพิ่มเติม ให้เลือกแท็บ 'ดูเพิ่มเติม' ในแผงสภาพแวดล้อม หากต้องการความช่วยเหลือเพิ่มเติม ให้เลือกปุ่ม ความช่วยเหลือ"
+"[english]WelcomePanel_UpdateDescTouch"	"Welcome to SteamVR! \n\nPress the B or Y button to browse environments and meet up with friends.\n\nTo subscribe to more environments, select the 'Get More' tab in the Environments panel. For more help, select the Help button."
 "Notification_LobbyInvite"	"{s:player_name} ได้เชิญคุณไปยังห้องของเขา \nเปิดแผงโซเชียลในเมนูเพื่อตอบกลับ"
 "[english]Notification_LobbyInvite"	"{s:player_name} has invited you to their room \nOpen the Social panel in the Menu to respond"
 "Notification_WearableUnlocked"	"คุณได้ปลดล็อคเครื่องสวมใส่ \"{s:item_name}\" !"
@@ -2243,10 +2247,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ไอเท็ม VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoTitle"	"สภาพแวดล้อม VIVE"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "HTCPromoDesc"	"อย่าลืมแวะชมตัวแทนและอุปกรณ์ตกแต่งฉากของ Vive สำหรับผู้เป็นเจ้าของ Vive"
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"สภาพแวดล้อมของ VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"คลิกที่นี่สำหรับสภาพแวดล้อมที่สร้างขึ้นโดยศิลปินของ Valve สำหรับ SteamVR"
@@ -2822,6 +2826,30 @@
 "VR_Avatar_DuckHuntDogHead"	"หัวสุนัข"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"ศีรษะมาสคอตสุนัขของ Duck Season เหมาะอย่างยิ่งสำหรับงานปาร์ตี้สังสรรค์ เพื่อซ่อนเร้นใบหน้าที่แท้จริงของคุณหรือหลอกให้เพื่อน ๆ ของคุณตกใจ\n\nปลดล็อคโดยเป็นเจ้าของเกม Duck Season"
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
+"VR_PhysicsProp_RezHeroFigurine"	"ตัวแทน Rez Infinite"
+"[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
+"VR_Avatar_WindowsMR_Controllers"	"Windows MR Controller"
+"[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
+"VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR Controller"
+"[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
+"TutorialWelcome_Tile1_WinMR_Desc"	"ยินดีต้อนรับสู่ SteamVR!"
+"[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
+"TutorialWelcome_Tile2_WinMR_Desc"	"ใน SteamVR คุณสามารถเยี่ยมชมสถานที่จริงและสถานที่ในจินตนาการกับเพื่อนได้"
+"[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"หากต้องการเปิดปิดเมนูนี้ ให้ใช้ปุ่มเมนูบนคอนโทรลเลอร์ของคุณ"
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
+"TutorialTeleport_Tile1_WinMR_Desc"	"เพื่อเทเลพอร์ต ให้กดเดินหน้าบนจอยสติก"
+"[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
+"TutorialTeleport_Tile2_WinMR_Desc"	"คุณจะเห็นส่วนโค้งที่ปลายเป็นวงกลมสีเขียวบนพื้น"
+"[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
+"TutorialTeleport_Tile3_WinMR_Desc"	"ปล่อยจอยสติกเพื่อเทเลพอร์ตไปยังวงกลมสีเขียว"
+"[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
+"TutorialTeleport_WinMR_Bottom_Desc"	"ส่วนโค้งเทเลพอร์ตจะเปลี่ยนเป็นสีแดงหากคุณไม่สามารถเทเลพอร์ตไปยังสถานที่นั้นได้"
+"[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_TF2Yeti"	"เยติ"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"Quest_TF2Yeti"	"ภารกิจเยติ"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
 }
 }
