--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
@@ -257,7 +257,7 @@
 "[english]TutorialPage2_Title"	"Using Props in Destinations"
 "TutorialPage1_Tile1_Desc"	"Для телепортації натисніть і утримуйте кнопку трекпада."
 "[english]TutorialPage1_Tile1_Desc"	"To teleport, press down and hold the trackpad button."
-"TutorialPage1_Tile2_Desc"	"Ви побачите дугу, яка завершиться зеленим колом на землі."
+"TutorialPage1_Tile2_Desc"	"Ви побачите дугу, яка завершується зеленим колом на землі."
 "[english]TutorialPage1_Tile2_Desc"	"You will see an arc that ends with a green circle on the ground."
 "TutorialPage1_Tile3_Desc"	"Відпустіть кнопку трекпада, щоби телепортуватися у зелене коло."
 "[english]TutorialPage1_Tile3_Desc"	"Release the trackpad button to teleport to the green circle."
@@ -681,7 +681,7 @@
 "[english]TutorialWorkshop_Bottom_Desc"	"Select Next with the trigger button to continue."
 "TutorialTeleport_Tile1_Desc"	"Для телепортації натисніть і утримуйте кнопку трекпада."
 "[english]TutorialTeleport_Tile1_Desc"	"To teleport, press down and hold the trackpad button."
-"TutorialTeleport_Tile2_Desc"	"Ви побачите дугу, яка закінчується зеленим колом на землі."
+"TutorialTeleport_Tile2_Desc"	"Ви побачите дугу, яка завершується зеленим колом на землі."
 "[english]TutorialTeleport_Tile2_Desc"	"You will see an arc that ends with a green circle on the ground."
 "TutorialTeleport_Tile3_Desc"	"Відпустіть кнопку трекпада, щоби телепортуватися у зелене коло."
 "[english]TutorialTeleport_Tile3_Desc"	"Release the trackpad button to teleport to the green circle."
@@ -733,7 +733,7 @@
 "[english]ValveLobby_InjectionMouldsDesc"	"This is a prototype injection mold set for the Steam Controller. It's a proto-mold, used for creating a small volume of testing units. In this case, it was used to create 200 units of the Gordon version of the controller, a version that was being tested about a year before the controller's release in November 2015. \n\nThese molds, and the Gordon version, were focused on ergonomic and reliability testing, and several large changes were made to the controller's design as a result of the testing we conducted with this prototype.\n\n"
 "ValveLobby_TF2HallTitle"	"Сакстон Гейл"
 "[english]ValveLobby_TF2HallTitle"	"Saxton Hale"
-"ValveLobby_TF2HallDesc"	"Найскладніший персонаж, якого ми коли-небудь створювали і який досі не з’явився у жодній грі, — це Секстон Гейл. Він показує, як наш творчий процес залежить від постійної взаємодії між нашими продуктами та спільнотою.\n\nСекстон виник як проста замальовка на веб-сторінці TF2, але відгук спільноти на нього змусив нас розвивати його, інкорпоруючи багато деталей, які запропонувала чи підтримала спільнота. \n\nЗ часом фан-арт, проза і навіть ігрові модифікації від спільноти про Секстона Гейла вплинули на постійний процес росту образу Секстона та його роль у всесвіті TF2.\n\n"
+"ValveLobby_TF2HallDesc"	"Найскладніший персонаж, якого ми коли-небудь створювали і який досі не з’явився у жодній грі, — це Сакстон Гейл. Він показує, як наш творчий процес залежить від постійної взаємодії між нашими продуктами та спільнотою.\n\nСакстон виник як проста замальовка на веб-сторінці TF2, але відгук спільноти на нього змусив нас розвивати його, інкорпоруючи багато деталей, які запропонувала чи підтримала спільнота. \n\nЗ часом фан-арт, проза і навіть ігрові модифікації від спільноти про Сакстона Гейла вплинули на постійний процес росту образу Сакстона та його роль у всесвіті TF2.\n\n"
 "[english]ValveLobby_TF2HallDesc"	"The most complex character we've ever created that still hasn't appeared in an actual game, Saxton Hale is a reminder of how our creative process is influenced by the ongoing conversation between our products and our community. \n\nSaxton began as a simple sketch on a TF2 web page, but the community's instant response to him caused us to flesh him out further, incorporating many of the details that the community suggested or responded to most. \n\nOver time, the community's Saxton Hale fan art, fiction, and even playable game modes have all affected the ongoing process of expanding Saxton's design, and his role in the TF2 universe.\n\n"
 "ValveLobby_TrophiesTitle"	"Трофеї"
 "[english]ValveLobby_TrophiesTitle"	"Trophies"
@@ -877,7 +877,7 @@
 "[english]VR_Map_Tower_Bridge_Desc"	"Tower Bridge is one of London's most recognizable and impressive structures.  Completed in 1894 it was designed in the Victorian Gothic style to match the Tower of London nearby."
 "VR_Map_Cannon_Wars"	"Гарматні війни"
 "[english]VR_Map_Cannon_Wars"	"Cannon Wars"
-"VR_Map_Cannon_Wars_Desc"	"Знищіть базу ворогів до того, як вони знищать вашу!"
+"VR_Map_Cannon_Wars_Desc"	"Знищте базу ворогів до того, як вони знищать вашу!"
 "[english]VR_Map_Cannon_Wars_Desc"	"Destroy the other team's base before they destroy yours!"
 "VR_PhysicsProp_Pumpkin_01"	"Гарбуз"
 "[english]VR_PhysicsProp_Pumpkin_01"	"Pumpkin"
@@ -2339,10 +2339,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ПРЕДМЕТИ VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Не забудьте оглянути аватар та об’єкт Vive для власників Vive."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"СЕРЕДОВИЩЕ VIVE"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Досліджуйте середовище Driftwood, створене Vive Creative Labs."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"СЕРЕДОВИЩА VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Натисніть тут, щоб оглянути середовища, створені художниками Valve для SteamVR."
@@ -2829,9 +2829,9 @@
 "[english]VR_Avatar_Wearable_HalloweenBagSpy"	"Bag Mask - TF2 Spy"
 "VR_Avatar_Wearable_HalloweenBagSpy_Desc"	"Коричнева паперова торба з обличчям шпигуна з TF2."
 "[english]VR_Avatar_Wearable_HalloweenBagSpy_Desc"	"A brown paper bag with the face of the Spy from TF2."
-"VR_Avatar_Wearable_HalloweenBagSaxton"	"Паперова маска Секстона Гейла з TF2"
+"VR_Avatar_Wearable_HalloweenBagSaxton"	"Паперова маска Сакстона Гейла з TF2"
 "[english]VR_Avatar_Wearable_HalloweenBagSaxton"	"Bag Mask - TF2 Saxton Hale"
-"VR_Avatar_Wearable_HalloweenBagSaxton_Desc"	"Коричнева паперова торба з обличчям Секстона Гейла з TF2."
+"VR_Avatar_Wearable_HalloweenBagSaxton_Desc"	"Коричнева паперова торба з обличчям Сакстона Гейла з TF2."
 "[english]VR_Avatar_Wearable_HalloweenBagSaxton_Desc"	"A brown paper bag with the face of Saxton Hale from TF2."
 "Quest_Kettle_Bell"	"Квест «Гиря»"
 "[english]Quest_Kettle_Bell"	"Kettle Bell Quest"
@@ -2963,13 +2963,51 @@
 "[english]VR_PhysicsProp_RacketNxFigurine_Desc"	"A miniature figurine of the Racket: Nx's Alien Robot Lizard with Sound Activated Brain (TM).\n\n*Sound Activated Brain not included.\n\nUnlocked by playing Racket: Nx."
 "VR_Avatar_DuckHuntDogHead"	"Собача голова"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
-"VR_Avatar_DuckHuntDogHead_Desc"	"Талісман-голова собаки, що полює на качок. Гарна для вечірок, маскує справжнє обличчя чи лякає друзів.\n\nРозблоковується грою у Duck Hunt."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"VR_Avatar_DuckHuntDogHead_Desc"	"Талісман-голова собаки, що полює на качок. Гарна для вечірок, маскує справжнє обличчя чи лякає друзів.\n\nРозблоковується грою у Duck Season."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Аватар Rez Infinite"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Аватар гравця за легендарний екшн-шутер.\n\nРозблоковується грою у Rez Infinite."
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
 "UGCHiddenLabel"	"Користувацький вміст прихований. Ви можете змінити це у налаштуваннях."
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
+"VR_Avatar_Wearable_GornWingedHelmet"	"Крилатий шолом"
+"[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
+"VR_Avatar_Wearable_GornWingedHelmet_Desc"	"Крилатий шолом, зірваний з голови самого «Генерала». Судячи із запаху, його ніколи не мили. Гордо позичений у гладіатора-переможця в GORN.\n\nРозблоковано грою у GORN."
+"[english]VR_Avatar_Wearable_GornWingedHelmet_Desc"	"The Winged Helmet, torn from the head of 'The General' himself. Judging by smell, never been washed. Proudly on loan from a victorious GORN gladiator.\n\nUnlocked by playing GORN."
+"VR_Avatar_WindowsMR_Controllers"	"Контролери Windows MR"
+"[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
+"VR_Avatar_WindowsMR_Controllers_Desc"	"Контролери Windows MR"
+"[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
+"TutorialWelcome_Tile1_WinMR_Desc"	"Вітаємо у SteamVR!"
+"[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
+"TutorialWelcome_Tile2_WinMR_Desc"	"У SteamVR ви можете відвідувати справжні та вигадані місця разом із друзями."
+"[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"Щоби відкрити і закрити це меню, використовуйте кнопку меню на вашому контролері."
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
+"TutorialTeleport_Tile1_WinMR_Desc"	"Для телепортації натисніть уперед на джойстику."
+"[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
+"TutorialTeleport_Tile2_WinMR_Desc"	"Ви побачите дугу, яка завершується зеленим колом на землі."
+"[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
+"TutorialTeleport_Tile3_WinMR_Desc"	"Відпустіть джойстик, щоби телепортуватися до зеленого кола."
+"[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
+"TutorialTeleport_WinMR_Bottom_Desc"	"Телепортаційна дуга почервоніє, якщо ви не можете телепортуватися у те місце."
+"[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Фігурка Маґі"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Фігурка таємничої дівчинки Маґі з OVERTURN.\n\nРозблоковано грою в OVERTURN."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Груша Поппі"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Грушосконалість.\n\nРозблоковано грою в Smashbox Arena."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Тилтазавр"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Доброзичливий тривимірний динозавр.\n\nРозблоковано грою у Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Маунт-Рейнір"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"Найвища гора у штаті Вашингтон, США."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
 }
 }
