--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_dutch.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_dutch.txt
@@ -975,6 +975,8 @@
 "[english]VR_Avatar_Wearable_BasicPanel001_Desc"	"A simple panel."
 "VR_Avatar_Wearable_TopHat"	"Hoge hoed"
 "[english]VR_Avatar_Wearable_TopHat"	"Top Hat"
+"VR_Avatar_Wearable_TopHat_Desc"	"Zie er piekfijn uit met een hoge hoed uit Team Fortress 2."
+"[english]VR_Avatar_Wearable_TopHat_Desc"	"Look dapper with a top hat from Team Fortress 2."
 "VR_Avatar_Wearable_BaseballCap001"	"Truckerpet"
 "[english]VR_Avatar_Wearable_BaseballCap001"	"Tow Truck Baseball Cap"
 "VR_Avatar_Wearable_Beard001"	"Gezicht - lange baard"
@@ -1041,6 +1043,8 @@
 "[english]VR_Avatar_Wearable_VeteranHat001"	"Veteran Hat"
 "VR_Avatar_Wearable_MilitaryBeret001"	"Militaire baret"
 "[english]VR_Avatar_Wearable_MilitaryBeret001"	"Military Beret"
+"VR_Avatar_Wearable_MilitaryBeret001_Desc"	"Een soldaat in stijl!\n\nBekend van Left 4 Dead."
+"[english]VR_Avatar_Wearable_MilitaryBeret001_Desc"	"Soldier chic!\n\nAs seen in Left 4 Dead."
 "VR_Avatar_Wearable_CaptainHat001"	"Kapiteinshoed"
 "[english]VR_Avatar_Wearable_CaptainHat001"	"Captain Hat"
 "VR_Avatar_Wearable_FishingHat001"	"Vishoed"
@@ -1069,6 +1073,8 @@
 "[english]VR_Avatar_Wearable_PropellerBeanie001"	"Propeller Beanie"
 "VR_Avatar_Wearable_ClockwerkMask001"	"Clockwerkmasker"
 "[english]VR_Avatar_Wearable_ClockwerkMask001"	"Clockwerk Mask"
+"VR_Avatar_Wearable_ClockwerkMask001_Desc"	"'Moet deels in elkaar worden gezet.'\n\nBekend van Dota 2."
+"[english]VR_Avatar_Wearable_ClockwerkMask001_Desc"	"'Some assembly required.'\n\nAs seen in Dota 2."
 "VR_Avatar_Wearable_DivingHelmet001"	"Duikhelm"
 "[english]VR_Avatar_Wearable_DivingHelmet001"	"Diving Helmet"
 "VR_Avatar_Wearable_Monocle001"	"Monocle"
@@ -1736,7 +1742,7 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE-VOORWERPEN"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "ValvePromoTitle"	"VALVE-OMGEVINGEN"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "UGCItem_Creator_Screenshot_Text"	"Screenshot door:"
@@ -1959,6 +1965,32 @@
 "[english]ScreenshotTitle_Landing"	"Screenshots by App"
 "ScreenshotHelp_Title"	"Screenshotpaneel"
 "[english]ScreenshotHelp_Title"	"Screenshots Panel"
+"VR_Avatar_Wearable_HalloweenBagMask001_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask001_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask002_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask002_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask003_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask003_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask004_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask004_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask005_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask005_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask006_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask006_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask007_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask007_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask008_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask008_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask009_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask009_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask011_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask011_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask012_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask012_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask013_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask013_Desc"	"A simple cheap option for a Halloween costume."
+"VR_Avatar_Wearable_HalloweenBagMask014_Desc"	"Een eenvoudige, goedkope optie voor een halloweenkostuum."
+"[english]VR_Avatar_Wearable_HalloweenBagMask014_Desc"	"A simple cheap option for a Halloween costume."
 "VR_PhysicsProp_GoogleEarthGlobe_Desc"	"De wereld ligt in jouw handen.\n\nOntgrendeld door het spelen van Google Earth VR."
 "[english]VR_PhysicsProp_GoogleEarthGlobe_Desc"	"The world is in your hands.\n\nUnlocked by playing Google Earth VR."
 "VR_PhysicsProp_KatanaX"	"De Katana X"
@@ -1983,5 +2015,13 @@
 "[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
 "TutorialTeleport_WinMR_Bottom_Desc"	"De teleportatieboog zal rood worden als je niet naar die locatie kunt teleporteren."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Magi-beeldje"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Volledig beeldje van het mysterieuze meisje MAGI uit OVERTURN.\n\nOntgrendeld door OVERTURN te spelen."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Poppy de peer"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Peerfect.\n\nOntgrendeld door Smashbox Arena te spelen."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
 }
 }
