--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
@@ -2342,10 +2342,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ITENS DO VIVE"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Não te esqueças de ver os itens do Vive exclusivos para utilizadores do Vive."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"AMBIENTE VIVE"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Explora Driftwood, um ambiente criado por Vive Creative Labs."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"AMBIENTES DA VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Clica aqui para ambientes criados por artistas da Valve para o SteamVR."
@@ -2963,7 +2963,7 @@
 "VR_Avatar_DuckHuntDogHead"	"Cabeça de Cão"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_Avatar_DuckHuntDogHead_Desc"	"A máscara do fato de cão do Duck Season. Ideal para festas, esconder a tua verdadeira face, ou assustar os teus amigos.\n\nItem desbloqueado ao jogar o jogo Duck Season."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Avatar do Rez Infinite"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"O avatar de jogador do lendário jogo de tiros.\n\nItem desbloqueado ao jogar o jogo Rez Infinite."
@@ -2992,5 +2992,29 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"A linha curva fica vermelha se o teletransporte para a zona alvo não for possível."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Magi - Figura"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Uma figura de corpo inteiro da misteriosa rapariga chamada MAGI, do OVERTURN.\n\nItem desbloqueado ao jogar o jogo OVERTURN."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Poppy, a Pera"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Rijo como um pero.\n\nItem desbloqueado ao jogar o jogo Smashbox Arena."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"O teu amigável dinossauro das pinturas 3D.\n\nItem desbloqueado ao jogar o jogo Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Monte Rainier"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"A montanha mais alta do estado de Washington, nos EUA."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Yeti"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"De acordo com as lendas sagradas do Tibete, o nobre yeti mora na região himalaica do Nepal. De acordo com o Team Fortress 2, podes encontá-lo no Mercenary Park. Então o que raio estava ele a fazer numa montanha no estado de Washington?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Missão: Yeti"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Encontra este monstro mítico a passear pelo Monte Rainier."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
 }
 }
