--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_turkish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_turkish.txt
@@ -1155,7 +1155,7 @@
 "[english]VR_Avatar_Crab_Desc"	"Never fear, she's de-beaked and completely harmless. The worst she might do is attempt to couple with your head. Fruitlessly!\n\nAs seen in Half-Life."
 "VR_Avatar_Jackolantern_01"	"Kabak Feneri"
 "[english]VR_Avatar_Jackolantern_01"	"Jack O'Lantern"
-"VR_Avatar_Jackolantern_01_Desc"	"Karşınızda: Atsız Kafasız Horsemann!\n\nTeam Fortress 2'de görüldüğü gibi."
+"VR_Avatar_Jackolantern_01_Desc"	"Karşınızda: Horseless Headless Horsemann!\n\nTeam Fortress 2'de görüldüğü gibi."
 "[english]VR_Avatar_Jackolantern_01_Desc"	"Behold: the Horseless Headless Horsemann!\n\nAs seen in Team Fortress 2."
 "VR_Avatar_TF2_Bot_Demo"	"TF2 Demo Bot"
 "[english]VR_Avatar_TF2_Bot_Demo"	"TF2 Demo Bot"
@@ -2341,10 +2341,10 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE ÖĞELERİ"
-"[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Vive sahipleri için oluşturulan Vive avatarı ve eşyalarına göz atmayı unutmayın."
-"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"HTCPromoTitle"	"VIVE ORTAMLARI"
+"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoDesc"	"Vive Creative Labs tarafından oluşturulan bir ortam olan Driftwood'u keşfedin."
+"[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE ORTAMLARI"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"SteamVR için Valve sanatçıları tarafından yapılan ortamlar için buraya tıklayın."
@@ -2965,8 +2965,8 @@
 "[english]VR_PhysicsProp_RacketNxFigurine_Desc"	"A miniature figurine of the Racket: Nx's Alien Robot Lizard with Sound Activated Brain (TM).\n\n*Sound Activated Brain not included.\n\nUnlocked by playing Racket: Nx."
 "VR_Avatar_DuckHuntDogHead"	"Köpek Kafası"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
-"VR_Avatar_DuckHuntDogHead_Desc"	"Duck Season Köpeğinin maskot kafası. Partiler için mükemmeldir. Gerçek yüzünüsü saklamaya veya arkadaşlarınızı korkutmaya birebir.\n\nDuck Hunt oynayarak açıldı."
-"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Hunt."
+"VR_Avatar_DuckHuntDogHead_Desc"	"Duck Season Köpeğinin maskot kafası. Partiler için mükemmeldir. Gerçek yüzünüsü saklamaya veya arkadaşlarınızı korkutmaya birebir.\n\nDuck Season oynayarak açıldı."
+"[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatarı"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Efsanevi aksiyon-nişancı oyunu için oyuncu avatarı.\n\nRez Infinite oynayarak açıldı."
@@ -2995,5 +2995,33 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Işınlanma göstergesi, o konuma ışınlanamıyorsanız kırmızıya dönecektir."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figürü"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"OVERTURN'deki gizemli kız 'MAGI'nin 3 boyutlu figürü.\n\nOVERTURN oynayarak açıldı."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Armut Poppy"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Armudun iyisi.\n\nSmashbox Arena oynayarak açıldı."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Muhitinizdeki 3B boyalı dost dinozorunuz.\n\nTilt Brush oynanarak açıldı."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Rainier Dağı"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"ABD'nin Washington Eyaletinde bulunan en yüksek dağdır."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Yeti"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"Kutsal Tibet folkloruna göre asil Yeti, Nepal'in Himalaya bölgesinde yaşar. Team Fortress 2'ye göre, onu bir Orman Cehenneminde bulabilirsiniz. Peki o zaman onun o lümpen kendisi Washington Eyaletindeki bir dağda ne yapıyordu?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Yeti Görevi"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Ranier Dağında kol gezen efsanevi canavarı bulun."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Pizza Hayattır!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Adam kaçıranın lezzetli bir yemek artığı.\n\nDeserving Life oynayarak açıldı."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
 }
 }
